<resources>
    <string name="app_name">Учет Покупок</string>

    <!--    Регистрация/Аутентификация в аккаунт-->
    <string name="forgot_password">забыли пароль?</string>
    <string name="choose_an_avatar_for_myself">Выберите аватарку</string>
    <string name="enter_your_name">введите ваше имя</string>
    <string name="enter_your_login">введите логин</string>
    <string name="registration_code_edit_text">Код подтверждения</string>
    <string name="enter_your_password">введите пароль</string>
    <string name="sign_up">Создать</string>
    <string name="registration_continue_button">Далее</string>
    <string name="registration_create_button">Создать</string>
    <string name="dialog_ok_button">Ок</string>
    <string name="dialog_cancel_button">Отмена</string>
    <string name="sign_in">Войти</string>
    <string name="sign_up_toolbar">Регистрация</string>
    <string name="sign_in_toolbar">Авторизация</string>
    <string name="create_account">Создать аккаунт</string>
    <string name="registration_email_edit_text">Email</string>
    <string name="registration_name_edit_text">Имя</string>
    <string name="male">Мужской</string>
    <string name="female">Женский</string>
    <string name="create_password">Пароль</string>
    <string name="repeat_password">повторите пароль</string>
    <string name="send_code">отправить код</string>
    <string name="change_password">изменить пароль</string>
    <string name="invalid_username">Некорректное имя</string>
    <string name="invalid_email">Некорректный email</string>
    <string name="invalid_gender">Выберете пол</string>
    <string name="invalid_password">Пароль должен быть >5 символом</string>
    <string name="invalid_repeat_password">пароль не совпадает</string>
    <string name="invalid_code">Код не подходит</string>
    <string name="invalid_code_is_empty">Введите код</string>
    <string name="invalid_sign_in">Неверный логин или пароль</string>
    <string name="invalid_internet_connection">Нет подключения к интернету</string>
    <string name="invalid_exception">Ошибка. </string>

    <!--   toolbar -->
    <string name="profile">Профиль</string>
    <string name="products">Продукты</string>
    <string name="recipes">Рецепты</string>
    <string name="check">Чек</string>
    <string name="statistic">Статистика</string>
    <string name="history">История</string>
    <string name="groups">Группы</string>
    <string name="group">Группа:</string>
    <string name="chip_custom_default">Свое</string>
    <string name="chip_custom">Свое: %1s</string>

    <!--    Группы в профиле-->
    <string name="group_label">Группа</string>


    <!--   ЧЕК -->
    <!--   страницы в чеке -->
    <string name="tab_product">продукты</string>
    <string name="tab_target">цели</string>
    <!--   кнопки -->
    <string name="add_product_by_search">\uf002 поиск</string>


    <!--    поисковая строка-->
    <string name="search_bar">\uf002</string>
    <string name="sorting_by_date">по дате</string>
    <string name="sorting_by_name">по названию</string>
    <string name="sorting_by_category">по категории</string>
    <string name="sorting_by_user">по пользователю</string>

    <!--   диалог добавление -->
    <string name="dialog_add_product">Новый продукт</string>
    <string name="dialog_add_target">Новая цель</string>
    <string name="dialog_add_text_hint">Название</string>
    <string name="dialog_add_text_shop">Магазин</string>
    <string name="dialog_add_text_hint_metric"> Метрика</string>
    <string name="dialog_add_text_hint_currency">Валюта</string>
    <string name="dialog_add_text_hint_count">Кол-во</string>
    <string name="dialog_add_text_hint_price">Цена</string>
    <string name="dialog_add_text_hint_category">Категория</string>
    <string name="dialog_add">Добавить</string>
    <string name="add_purchase_comment">Комментарий:</string>
    <string name="comment_purchase">Комментарий: %1s</string>
    <!--   диалог удалени -->
    <string name="dialog_delete_item">Вы уверены, что хотите удалить %1$s?</string>
    <string name="dialog_delete_group">Вы уверены, что хотите удалить группу %1$s?</string>
    <!--   диалог добавления в историю -->
    <string name="dialog_to_history_price">Цена</string>
    <string name="dialog_to_history_button">В Архив</string>
    <string name="dialog_to_history_product">Продукт %1$s</string>
    <string name="dialog_to_history_target">Цель %1$s</string>

    <!--   диалог группы -->
    <string name="dialog_edit_group_name">Название группы</string>
    <string name="dialog_edit_button">Сохранить</string>
    <string name="dialog_create_group_button">Создать</string>
    <string name="dialog_join_group_token">Введите токен</string>
    <string name="join_group_button">Присоединиться</string>
    <string name="create_group_button">Создать группу</string>

    <!--   ячейка продукта -->
    <string name="recipe">рецепты</string>
    <string name="pfc">Ккал/Б/Ж/У:</string>
    <string name="date_creation">Дата создания:</string>
    <string name="description">Комментарий:</string>
    <string name="category">Категория:</string>
    <string name="shop">Магазин: %1s</string>
    <string name="first_price">Первоначальная цена:</string>
    <string name="last_price">Конечная цена:</string>

    <!--    Профиль-->
    <string name="weight">%1$s кг</string>
    <string name="height">%1$s см</string>
    <string name="height_label">Рост</string>

    <string name="age">%1$s лет</string>

    <!--    Настройки-->
    <string name="settings">Настройки</string>
    <string name="settings_currency">Валюта: %1s</string>
    <string name="edit_profile">Редактировать профиль</string>
    <string name="exit">Выход</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="group_fragment_token">Код приглашения</string>
    <string name="price">Цена:</string>
    <string name="user">Пользователь</string>
    <string name="date_buy">Дата покупки:</string>
    <string name="first_user">Добавил:</string>
    <string name="last_user">Купил:</string>
    <string name="fragment_join_group">Добавление группы</string>
    <string name="fragment_create_group">Создание группы</string>
    <string name="popup_user_admin">Администратор</string>
    <string name="popup_user_delete">Удалить</string>
    <string name="dialog_user_options_make_admin">Назначить администратором</string>
    <string name="dialog_user_options_del_admin">Снять администртора</string>
    <string name="dialog_user_options_delete">Удалить</string>
    <string name="registration_birthday_label">Дата рождения</string>
    <string name="registration_gender_edit_text">Пол</string>
    <string name="registration_height_label">Рост</string>
    <string name="registration_weight_label">Вес</string>
    <string name="enter_code">Код</string>
    <string name="date_format">d MMMM yyyy</string>
    <string name="birthday">День рождения</string>
    <string name="add_recipe">добавить рецепт</string>
    <string name="search">Поиск</string>
    <string name="count">Количесво:</string>
    <string name="sort">Сортировка</string>
    <string name="grouping">Группировка</string>
    <string name="exclude_groups">Исключить группы</string>
    <string name="exclude_persons">Исключить пользователей</string>
    <string name="complete">Применить</string>
    <string name="group_by_groups">По группам</string>
    <string name="group_by_person">По пользователям</string>
    <string name="add_group">Создать группу</string>
    <string name="select_currency">Выберите валюту</string>
    <string name="weight_label">Вес</string>
    <string name="email_label">Email</string>
    <string name="name_label">Имя</string>
    <string name="chip_custom_not">Нет</string>
    <string name="pair_string">%1$s %2$s</string>
    <string name="bought">Куплено</string>
    <string name="loading_server">Подключение...</string>
    <string name="connection_ok">Подключение восстановлено</string>
    <string name="not_internet">Нет подключения к интернету</string>
    <string name="not_purchases_items">Нет купленных позиций</string>
    <string name="notification">Уведомления</string>
    <string name="for_all_time">За все время</string>
    <string name="most_popular">Самый популярный</string>
    <string name="most_popular_value">Самый популярный: %1s</string>
    <string name="most_expensive">Самый дорогой</string>
    <string name="most_expensive_value">Самый дорогой: %1s\u00A0%1s\u00A0%1s\u00A0%1s</string>

    <string name="count_purchase">Покупок:</string>
    <string name="money_spent">Денег потрачено:</string>
    <string name="count_purchase_value">Покупок: %1s</string>
    <string name="money_spent_value">Денег потрачено: %1s</string>
    <string name="add_most_purchases">Добавил больше всего товаров:</string>
    <string name="buy_most_purchases">Купил больше всего товаров:</string>
    <string name="add_most_purchases_value">Добавил больше всего товаров: %1s</string>
    <string name="buy_most_purchases_value">Купил больше всего товаров: %1s</string>
    <string name="personal">Личная</string>
    <string name="select_range">Выберете интервал</string>
    <string name="year">Год</string>
    <string name="month">Мес</string>
    <string name="week">Нед</string>


</resources>