<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.registration.RegistrationActivity">


        <LinearLayout
            android:id="@+id/linear_edit_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/login_edit_text"
                style="@style/EditTextRegistration"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:hint="@string/enter_email"
                android:inputType="textEmailAddress" />
            <Button
                android:id="@+id/send_code_button"
                style="@style/ButtonStyleAuthorisation"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:text="@string/send_code"
                />
            <EditText
                android:id="@+id/code_edit_text"
                style="@style/EditTextRegistration"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:hint="@string/enter_code"
                android:inputType="number" />
            <EditText
                android:id="@+id/password_edit_text"
                style="@style/EditTextRegistration"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:hint="@string/enter_your_password"
                android:inputType="textPassword" />
            <EditText
                android:id="@+id/repeat_password_edit_text"
                style="@style/EditTextRegistration"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:hint="@string/repeat_password"
                android:inputType="textPassword" />
        </LinearLayout>

        <Button
            android:id="@+id/continue_button"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_margin="20dp"
            android:background="@drawable/edit_text_registration"
            android:text="@string/change_password"
            android:textSize="14sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linear_edit_view" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>